[1] Fix registration page styling on mobile view

--- a/src/components/apiRegistrationForm/RegistraionForm.css
+++ b/src/components/apiRegistrationForm/RegistraionForm.css
@@ -148,4 +148,12 @@ color: var(--color-day-yellow);
   .registration-wrapper {
     flex-direction: column;
   }
+
+  .left {
+    padding: 3rem 2rem;
+  }
+
+  .right {
+    margin-left: 0;
+  } 
 }
